# inih_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
examples/: README.md  advanced_example.rs  basic_example.rs  callback_example.rs  file_example.rs
src/: error.rs  lib.rs  parser.rs  reader.rs
tests/: README.md  integration_tests.rs  test_files.rs
